--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
         "panel"
     ],
     "dependencies": {
-        "@spectrum-web-components/theme": "0.39.4",
-        "@swc-react/button": "0.39.4",
-        "@swc-react/button-group": "^0.39.4",
-        "@swc-react/field-label": "^0.39.4",
-        "@swc-react/menu": "^0.39.4",
-        "@swc-react/picker": "^0.39.4",
-        "@swc-react/slider": "^0.39.4",
-        "@swc-react/swatch": "^0.39.4",
-        "@swc-react/switch": "^0.39.4",
-        "@swc-react/theme": "0.39.4",
+        "@swc-react/button": "1.7.0",
+        "@swc-react/button-group": "1.7.0",
+        "@swc-react/field-label": "1.7.0",
+        "@swc-react/menu": "1.7.0",
+        "@swc-react/picker": "1.7.0",
+        "@swc-react/slider": "1.7.0",
+        "@swc-react/swatch": "1.7.0",
+        "@swc-react/switch": "1.7.0",
+        "@swc-react/theme": "1.7.0",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     },
     "devDependencies": {
-        "@adobe/ccweb-add-on-scripts": "^1.2.1",
-        "@adobe/ccweb-add-on-sdk-types": "^1.2.1",
+        
+        "@adobe/ccweb-add-on-scripts": "^3.1.0",
+        "@types/adobe__ccweb-add-on-sdk": "^1.3.0",        
         "@babel/core": "7.23.3",
         "@babel/preset-env": "7.23.3",
         "@babel/preset-react": "7.23.3",
